# jet-docs

./: .gitignore  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/: renovate.json
.github/actions/setup-vapoursynth/: action.yml
.github/workflows/: ci.yml
docs/: index.md
scripts/: gen_ref_pages.py
