[project]
name = "jet-docs"
version = "0.0.0"
description = "unofficial JET API docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "vsaa",
    "vsadjust",
    "vsdeband",
    "vsdehalo",
    "vsdeinterlace",
    "vsdenoise",
    "vsexprtools",
    "vskernels",
    "vsmasktools",
    "vspreview",
    "vspyplugin",
    "vsrgtools",
    "vsscale",
    "vssource",
    "vstools",
    "vstransitions",

    "black==25.1.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.6.4",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==0.28.0",
    "mypy==1.15.0",
    "ruff==0.9.6",
]

[tool.uv]
package = false

[tool.uv.sources]
vsaa = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-aa.git", rev = "efaab32737a5330412549aa430bd3741ce5922a2" }
vsadjust = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-adjust.git", rev = "e4e2c5ac2cad8bd9faecb9a46bcebc9e6c961c3b" }
vsdeband = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deband.git", rev = "f30601e38c9543080fc938ac613ff2de1c82d866" }
vsdehalo = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-dehalo.git", rev = "84d809fb6c877ef6968a26da2be67c18678299fe" }
vsdeinterlace = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deinterlace.git", rev = "afb4f62abc59595ddaae894e4e13c317720943e4" }
vsdenoise = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-denoise.git", rev = "b37bdc3d3b38e11c840add5968dc666818a084b1" }
vsexprtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-exprtools.git", rev = "bc6dc31ec6b7262215807f61d7b1a55549502b02" }
vskernels = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-kernels.git", rev = "4814d18b57623d00ce1bc7426c18cfe15ddf6c08" }
vsmasktools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-masktools.git", rev = "6bf76193d07d9a2e25b50ca35d726e5e5bb2dccc" }
vspreview = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview.git", rev = "8f9f6663a6aad1397b1485f1d0997bd7e003b9fa" }
vspyplugin = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-pyplugin.git", rev = "9ec87e79ece0c830dd6a643f537f507211b4fc33" }
vsrgtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-rgtools.git", rev = "3b18cbfc7306680c60138d7c1e5b461b368805a0" }
vsscale = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-scale.git", rev = "b0714ab0b7902f13cd8dc08f331426e84985caf6" }
vssource = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-source.git", rev = "d9adfdfbc91d39341b8cd81c52479524f05ed4f3" }
vstools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-tools.git", rev = "881b66a2f3e8843b838bdd36f28bf9b49a38f223" }
vstransitions = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-transitions.git", rev = "38d76e15159bae0a92c666346f65d75553291497" }

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "FIX002", # Line contains TODO, consider resolving the issue.
    "INP001",
    "S101",   # Use of `assert`.
    "TD002",  # Missing author in TODO.
    "TD003",  # Missing issue link on the line following this TODO.
]
