[project]
name = "jet-docs"
version = "0.0.0"
description = "unofficial JET API docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "vsaa",
    "vsadjust",
    "vsdeband",
    "vsdehalo",
    "vsdeinterlace",
    "vsdenoise",
    "vsexprtools",
    "vskernels",
    "vsmasktools",
    "vspreview",
    "vspyplugin",
    "vsrgtools",
    "vsscale",
    "vssource",
    "vstools",
    "vstransitions",

    "black==25.1.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.6.14",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==0.29.1",
    "mypy==1.16.1",
    "ruff==0.11.13",
]

[tool.uv]
package = false

[tool.uv.sources]
vsaa = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-aa.git", rev = "efaab32737a5330412549aa430bd3741ce5922a2" }
vsadjust = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-adjust.git", rev = "e4e2c5ac2cad8bd9faecb9a46bcebc9e6c961c3b" }
vsdeband = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deband.git", rev = "f30601e38c9543080fc938ac613ff2de1c82d866" }
vsdehalo = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-dehalo.git", rev = "d0d6acd7c0378d92142caf8a5c5616173a3eb3f7" }
vsdeinterlace = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deinterlace.git", rev = "63ff1567a625bb8a723df19b651997b893317e66" }
vsdenoise = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-denoise.git", rev = "b37bdc3d3b38e11c840add5968dc666818a084b1" }
vsexprtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-exprtools.git", rev = "13db64ac02e1bac210696ebded79dd7c95f4febc" }
vskernels = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-kernels.git", rev = "6a5c99417408a18ce7b253dac638ababc2d9fc81" }
vsmasktools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-masktools.git", rev = "6bf76193d07d9a2e25b50ca35d726e5e5bb2dccc" }
vspreview = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview.git", rev = "617a5cc498e65e8dce8b82f1c805dd91cbe2ee05" }
vspyplugin = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-pyplugin.git", rev = "a658c500e944ff9f9a55e6f5a65cec00bcc328a0" }
vsrgtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-rgtools.git", rev = "3b18cbfc7306680c60138d7c1e5b461b368805a0" }
vsscale = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-scale.git", rev = "c3006ae8e6e48be9168e84a6af234cc7eaf9da43" }
vssource = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-source.git", rev = "d9adfdfbc91d39341b8cd81c52479524f05ed4f3" }
vstools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-tools.git", rev = "8a05944d7dc3024e8c20fe581c7b05f85c930e75" }
vstransitions = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-transitions.git", rev = "38d76e15159bae0a92c666346f65d75553291497" }

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "FIX002", # Line contains TODO, consider resolving the issue.
    "INP001",
    "S101",   # Use of `assert`.
    "TD002",  # Missing author in TODO.
    "TD003",  # Missing issue link on the line following this TODO.
]
